ingress-controller/traefik/svc-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: beta
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-beta
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-beta
  ports:
    - port: 8000
      name: web
      targetPort: 8000
      nodePort: 30080
      protocol: TCP
    - port: 8443
      name: websecure
      targetPort: 8443
      protocol: TCP
      nodePort: 30443
    - port: 9100
      name: metrics
      targetPort: 9100
      protocol: TCP
    - port: 12093
      name: tcp
      targetPort: 12093
      protocol: TCP
      nodePort: 32093
